src/styles/punk-code-base.css
@layer base {
  @font-face {
    font-family: Bowlby One SC;
    src: url(/assets/fonts/Bowlby_One_SC/BowlbyOneSC-Regular.woff) format("woff");
    font-display: swap;
  }
  
  h1, h2 {
    @apply font-bowlby;
  }
  h1 {
    @apply text-4xl md:text-5xl lg:text-6xl mb-4;
  }
  h2 {
    @apply text-3xl md:text-4xl lg:text-5xl;
  }

  a {
    @apply hover:underline focus:underline;
  }

  main a {
    @apply text-penguin-orange;
  }

  footer a {
    @apply text-penguin-black;
  }

  article p {
    @apply mb-4;
  }
}

